@@ -215,6 +215,7 @@ i18n.phonenumbers.metadata.countryCodeToRegionCodeMap = {
 ,855:["KH"]
 ,856:["LA"]
 ,870:["001"]
+,878:["001"]
 ,880:["BD"]
 ,883:["001"]
 ,886:["TW"]
@@ -718,7 +719,7 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ]
 ,"BH":[,[,,"[136-9]\\d{7}","\\d{8}"]
 ,[,,"(?:1(?:3[3-6]|6[0156]|7\\d)\\d|6(?:1[16]\\d|6(?:0\\d|3[12]|44)|9(?:69|9[6-9]))|77\\d{2})\\d{4}","\\d{8}"]
-,[,,"(?:3(?:[23469]\\d|77|8[348])\\d|6(?:1[16]\\d|6(?:[06]\\d|3[03-9]|44)|9(?:69|9[6-9]))|77\\d{2})\\d{4}","\\d{8}"]
+,[,,"(?:3(?:[23469]\\d|5[35]|77|8[348])\\d|6(?:1[16]\\d|6(?:[06]\\d|3[03-9]|44)|9(?:69|9[6-9]))|77\\d{2})\\d{4}","\\d{8}"]
 ,[,,"80\\d{6}","\\d{8}"]
 ,[,,"(?:87|9[014578])\\d{6}","\\d{8}"]
 ,[,,"84\\d{6}","\\d{8}"]
@@ -1228,7 +1229,7 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ,[,,"90[059]\\d{7}","\\d{10}"]
 ,[,,"NA","NA"]
 ,[,,"NA","NA"]
-,[,,"210[0-6]\\d{4}|40(?:[04]0\\d{4}|10[0-3]\\d{3}|2(?:00\\d|900)\\d{2}|3[01]\\d{4}|5\\d{5}|70[01]\\d{3})|5100\\d{4}","\\d{8}"]
+,[,,"210[0-6]\\d{4}|4(?:0(?:[04]0\\d{4}|10[0-3]\\d{3}|2(?:00\\d|900)\\d{2}|3[01]\\d{4}|5\\d{5}|70[01]\\d{3})|1[01]\\d{5})|5100\\d{4}","\\d{8}"]
 ,"CR",506,"00",,,,"(19(?:0[0-2468]|19|66|77))",,,,[[,"(\\d{4})(\\d{4})","$1 $2",["[24-7]|8[3-9]"]
 ,"","$CC $1",0]
 ,[,"(\\d{3})(\\d{3})(\\d{4})","$1-$2-$3",["[89]0"]
@@ -1488,7 +1489,7 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ,,[,,"1(?:0[12]|12)|911","\\d{3}"]
 ,[,,"NA","NA"]
 ]
-,"EE":[,[,,"[3-9]\\d{6,7}|800\\d{6,7}","\\d{7,10}"]
+,"EE":[,[,,"1\\d{3,4}|[3-9]\\d{6,7}|800\\d{6,7}","\\d{4,10}"]
 ,[,,"(?:3[23589]|4(?:0\\d|[3-8])|6\\d|7[1-9]|88)\\d{5}","\\d{7,8}"]
 ,[,,"(?:5\\d|8[1-5])\\d{6}|5(?:[02]\\d{2}|1(?:[0-8]\\d|95)|5[0-478]\\d|64[0-4]|65[1-589])\\d{3}","\\d{7,8}"]
 ,[,,"800(?:0\\d{3}|1\\d|[2-9])\\d{3}","\\d{7,10}"]
@@ -1506,8 +1507,8 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ,"","",0]
 ]
 ,,[,,"NA","NA"]
-,,,[,,"800[2-9]\\d{3}","\\d{7}"]
-,[,,"NA","NA"]
+,,,[,,"1\\d{3,4}|800[2-9]\\d{3}","\\d{4,7}"]
+,[,,"1(?:2[01245]|3[0-6]|4[1-489]|5[0-59]|6[1-46-9]|7[0-27-9]|8[189]|9[012])\\d{1,2}","\\d{4,5}"]
 ,,[,,"11[02]","\\d{3}"]
 ,[,,"NA","NA"]
 ]
@@ -2400,7 +2401,7 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ]
 ,"JO":[,[,,"[235-9]\\d{7,8}","\\d{7,9}"]
 ,[,,"(?:2(?:6(?:2[0-35-9]|3[0-57-8]|4[24-7]|5[0-24-8]|[6-9][02])|7(?:0[1-79]|10|2[014-7]|3[0-689]|4[019]|5[0-3578]))|32(?:0[1-69]|1[1-35-7]|2[024-7]|3\\d|[457][02]|60)|53(?:[013][02]|2[0-59]|49|5[0-35-9]|6[15]|7[45]|8[1-6]|9[0-36-9])|6(?:2[50]0|300|4(?:0[0125]|1[2-7]|2[0569]|[38][07-9]|4[025689]|6[0-589]|7\\d|9[0-2])|5(?:[01][056]|2[034]|3[0-57-9]|4[17-8]|5[0-69]|6[0-35-9]|7[1-379]|8[0-68]|9[02-39])|)|87(?:[02]0|7[08]|9[09]))\\d{4}","\\d{7,8}"]
-,[,,"7(?:45|5\\d|7[2-79]|8[5-8]|9[035-9])\\d{6}","\\d{9}"]
+,[,,"7(?:5\\d|7[2-79]|8[5-8]|9[035-9])\\d{6}","\\d{9}"]
 ,[,,"80\\d{6}","\\d{8}"]
 ,[,,"900\\d{5}","\\d{8}"]
 ,[,,"85\\d{6}","\\d{8}"]
@@ -2625,7 +2626,7 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ]
 ,"KW":[,[,,"[12569]\\d{6,7}|65816\\d{6}","\\d{7,8}|\\d{11}"]
 ,[,,"(?:18\\d|2(?:[23]\\d{2}|4[1-35-9]\\d|5(?:0[034]|[2-46]\\d|5[1-3]|7[1-7])))\\d{4}","\\d{7,8}"]
-,[,,"(?:5(?:0[0-2568]|5\\d)|6(?:0[034679]|5(?:[015-79]|8(?:[02-9]|1[0-57-9]))|6\\d|7[067]|9[69])|9(?:0[09]|4[049]|66|[79]\\d))\\d{5}","\\d{8}"]
+,[,,"(?:5(?:0[0-2568]|5\\d)|6(?:0[034679]|5(?:[015-79]|8(?:[02-9]|1[0-57-9]))|6\\d|7[067]|9[69])|9(?:0[09]|4[049]|6[69]|[79]\\d))\\d{5}","\\d{8}"]
 ,[,,"NA","NA"]
 ,[,,"NA","NA"]
 ,[,,"NA","NA"]
@@ -2674,7 +2675,7 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ]
 ,"LA":[,[,,"[2-8]\\d{7,9}","\\d{6,10}"]
 ,[,,"(?:2[13]|[35-7][14]|41|8[1468])\\d{6}","\\d{6,8}"]
-,[,,"20(?:2[23]|5[4-68]|7[78]|9[7-9])\\d{6}","\\d{10}"]
+,[,,"20(?:2[238]|5[4-68]|7[78]|9[7-9])\\d{6}","\\d{10}"]
 ,[,,"NA","NA"]
 ,[,,"NA","NA"]
 ,[,,"NA","NA"]
@@ -3876,7 +3877,7 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ,[,,"NA","NA"]
 ]
 ,"QA":[,[,,"[2-8]\\d{6,7}","\\d{7,8}"]
-,[,,"44\\d{6}","\\d{7,8}"]
+,[,,"4[04]\\d{6}","\\d{7,8}"]
 ,[,,"[3567]\\d{7}","\\d{7,8}"]
 ,[,,"800\\d{4}","\\d{7,8}"]
 ,[,,"NA","NA"]
@@ -4159,14 +4160,14 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ,[,,"NA","NA"]
 ]
 ,"SI":[,[,,"[1-7]\\d{6,7}|[89]\\d{4,7}","\\d{5,8}"]
-,[,,"(?:1\\d|2[2-8]|3[4-8]|4[24-8]|[57][3-8])\\d{6}","\\d{7,8}"]
+,[,,"(?:1\\d|[25][2-8]|3[4-8]|4[24-8]|7[3-8])\\d{6}","\\d{7,8}"]
 ,[,,"(?:[37][01]|4[019]|51|6[48])\\d{6}","\\d{8}"]
 ,[,,"80\\d{4,6}","\\d{6,8}"]
 ,[,,"90\\d{4,6}|89[1-3]\\d{2,5}","\\d{5,8}"]
 ,[,,"NA","NA"]
 ,[,,"NA","NA"]
 ,[,,"(?:59|8[1-3])\\d{6}","\\d{8}"]
-,"SI",386,"00","0",,,"0",,,,[[,"(\\d)(\\d{3})(\\d{2})(\\d{2})","$1 $2 $3 $4",["[12]|3[4-8]|4[24-8]|5[3-8]|7[3-8]"]
+,"SI",386,"00","0",,,"0",,,,[[,"(\\d)(\\d{3})(\\d{2})(\\d{2})","$1 $2 $3 $4",["[12]|3[4-8]|4[24-8]|5[2-8]|7[3-8]"]
 ,"(0$1)","",0]
 ,[,"([3-7]\\d)(\\d{3})(\\d{3})","$1 $2 $3",["[37][01]|4[019]|51|6"]
 ,"0$1","",0]
@@ -4479,9 +4480,7 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ,[,,"60\\d{7}","\\d{9}"]
 ,"TH",66,"00","0",,,"0",,,,[[,"(2)(\\d{3})(\\d{4})","$1 $2 $3",["2"]
 ,"0$1","",0]
-,[,"([3-7]\\d)(\\d{3})(\\d{3,4})","$1 $2 $3",["[3-7]"]
-,"0$1","",0]
-,[,"([89])(\\d{4})(\\d{4})","$1 $2 $3",["[89]"]
+,[,"([3-9]\\d)(\\d{3})(\\d{3,4})","$1 $2 $3",["[3-9]"]
 ,"0$1","",0]
 ,[,"(1[89]00)(\\d{3})(\\d{3})","$1 $2 $3",["1"]
 ,"$1","",0]
@@ -5100,6 +5099,22 @@ i18n.phonenumbers.metadata.countryToMetadata = {
 ,[,,"NA","NA"]
 ,[,,"NA","NA"]
 ,"001",870,"",,,,,,,,[[,"(\\d{3})(\\d{3})(\\d{3})","$1 $2 $3",,"","",0]
+]
+,,[,,"NA","NA"]
+,,,[,,"NA","NA"]
+,[,,"NA","NA"]
+,,[,,"NA","NA"]
+,[,,"NA","NA"]
+]
+,"878":[,[,,"1\\d{11}","\\d{12}"]
+,[,,"NA","NA"]
+,[,,"NA","NA"]
+,[,,"NA","NA"]
+,[,,"NA","NA"]
+,[,,"NA","NA"]
+,[,,"NA","NA"]
+,[,,"10\\d{10}","\\d{12}"]
+,"001",878,"",,,,,,,1,[[,"(\\d{2})(\\d{5})(\\d{5})","$1 $2 $3",,"","",0]
 ]
 ,,[,,"NA","NA"]
 ,,,[,,"NA","NA"]
